--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -1,9 +1,14 @@
-<h1>
-    <div id="app-name">
-        <h2>Pseudo Instagram</h2>
-    </div> 
-    <div id="nav-bar-info">
-        <p id="username"> {{ user.get('username') }} </p>
-        <p id="sign-out">Sign out</p>
-    </div>
-</h1>
+<nav class="main-nav">
+    <h1>Photo App</h1>
+    <ul>
+        <li>
+            {% if request.url_rule.endpoint == 'api_docs' %}
+                <a href="/">Home</a>
+            {% else %}
+                <a href="/api">API Docs</a>
+            {% endif %}
+        </li>
+        <li><span>{{ user.username }}</span></li>
+        <li><a href="#">Sign out</a></li>
+    </ul>
+</nav>
