--- a/static/css/lab6.css
+++ b/static/css/lab6.css
@@ -39,3 +39,18 @@ main {
     font-size: 0.9em;
     color: #555;
 }
+
+.suggestion button {
+    padding: 5px 10px;
+    border: 1px;
+    border-radius: 4px;
+    border-color: #999;
+}
+
+.follow {
+    background: transparent;
+}
+
+.unfollow {
+    background: white;
+}
