convert lab 6 work to suggestions on homework 4

--- a/templates/starter-client.html
+++ b/templates/starter-client.html
@@ -21,7 +21,7 @@
             <p class="suggestion-text">Suggestions for you</p>
             <div>
                 <!-- Suggestions rendered client-side -->
-                <p>TBD</p>
+                {% include 'includes/suggestions.html'  %}
             </div>
         </div>
     </aside>
