--- a/static/css/suggestions.css
+++ b/static/css/suggestions.css
@@ -6,19 +6,18 @@ body {
     font-family:Arial, Helvetica, sans-serif;
 }
 
-main {
-    display: flex;
-    justify-content: flex-end; /*left,right alignment*/
-}
 
 #suggestions {
     width: 350px;
+    height: 700px;
     background-color: #f2f2f2;
+    display: inline;
 }
 
 .suggestion {
+    width: 300px;
     display: grid;
-    grid-template-columns: 40px auto 70px;
+    grid-template-columns: 40px auto 60px;
     align-items: center; /*vertical alignment */
     padding: 5px;
 }
