--- a/static/css/posts.css
+++ b/static/css/posts.css
@@ -33,6 +33,10 @@
     padding-bottom: 5px;
     padding-left: 5px;
 }
+.icons button {
+    background-color: transparent;
+    border-style: none;
+}
 .three {
     display: flex;
     justify-content: space-between;
@@ -100,6 +104,8 @@
 .comment{
     display: flex;
     height: auto ;
+    padding-left: 5px;
+    font-size: 0.9em;
 }
 .all-comments {
     color: rgb(66 103 178);
@@ -107,6 +113,10 @@
     text-decoration: none;
     height: 30px;
     margin-top: 5px;
+}
+.all-comments:focus {
+    font-weight: bold;
+    border-style: solid;
 }
 .comment-username {
     font-weight: 700;
@@ -180,6 +190,10 @@
     position: fixed;
     right: 20px;
     top: 20px;
+}
+.modal-bg #close:focus {
+    border-color: blue;
+    font-weight: bold;
 }
 
 .modal img {
