--- a/templates/login.html
+++ b/templates/login.html
@@ -54,7 +54,38 @@
             <div class="error">{{ message }}</div>
         {% endif %}
         
-        YOUR FORM HERE
+
+
+        <div id="username-input">
+            <label
+                for="username">
+                Username
+            </label>
+            <input
+                name="username"
+                placeholder="username"
+                type="text"
+                value=""
+                id="username"
+            >
+        </div>
+        <div id="password-input">
+            <label
+                for="password">
+                Password
+            </label>
+            <input
+                name="password"
+                placeholder="password"
+                type="text"
+                value=""
+                id="password"
+            >
+        </div>
+        <button
+            type="submit">
+            Login
+        </button>
     </form> 
 </body>
 </html>
